--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         tools:ignore="ExtraText">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Pokedex.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
