--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:theme="@style/Theme.Pokedex"
         tools:ignore="ExtraText">
         <activity
+            android:theme="@style/Theme.Pokedex.NoActionBar"
             android:name=".MainActivity"
-            android:theme="@style/SplashTheme"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
