--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,11 +60,19 @@ dependencies {
     //Butterknife
     implementation 'com.jakewharton:butterknife:7.0.1'
 
-    //REtrofit
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     testImplementation 'junit:junit:4.+'
+
+    //Recycler view
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:24.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:24.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:24.0.0'
 }
