--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:24.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:24.0.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:compiler:4.11.0'
 }
